--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -9,8 +9,9 @@
 /coverage
 
 # production
-# Remove /build from here so it's not ignored
-#.build
+# Ensure build directory is included in deployment
+# Commented out 'build' line
+# .build
 
 # misc
 .DS_Store
@@ -22,6 +23,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Local Netlify folder
-.netlify
