--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "build" }
     }
   ],
   "routes": [
@@ -16,7 +21,6 @@
       "dest": "/server.js"
     }
   ],
-  "installCommand": "npm install"
+  "installCommand": "npm install && cd frontend && npm install"
 }
-
 
