--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
   ],
   "routes": [
     {
+      "src": "/bot(.*)",
+      "dest": "/server.js"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/server.js"
     },
@@ -23,4 +27,8 @@
   ],
   "installCommand": "npm install && cd frontend && npm install"
 }
+
+
+
+
 
