--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "dev": "nodemon server.js"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "vercel": "^39.2.2"
   }
 }
-
-
-  
