--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,12 @@
       "dest": "/server.js"
     },
     {
+      "src": "/static/(.*)",
+      "dest": "/frontend/build/static/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "/frontend/build/$1"
     }
   ],
   "env": {
