--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://proseed:proseed0987@proseedtesting.fnvp5.mongodb.net/?retryWrites=true&w=majority&ssl=true&authSource=admin
 TELEGRAM_BOT_TOKEN=7081906465:AAH6xnu3R-veRjdxjUxwvz-cNXHZVitX9r4
+BASE_URL=https://backend-proseed.vercel.app
