--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection
-MONGO_URI=mongodb+srv://proseed:proseed0987@proseedtesting.fnvp5.mongodb.net/?retryWrites=true&w=majority&ssl=true&authSource=admin
+MONGO_URI=mongodb+srv://proseed:proseed0987@proseedtesting.fnvp5.mongodb.net/?retryWrites=true&w=majority&appName=ProseedTesting
 
 # Telegram Configuration
 TELEGRAM_BOT_TOKEN=7081906465:AAH6xnu3R-veRjdxjUxwvz-cNXHZVitX9r4
@@ -16,6 +16,7 @@ PORT=3000
 JWT_SECRET=your_jwt_secret_here
 RATE_LIMIT_WINDOW=900000
 RATE_LIMIT_MAX=100
+TRUST_PROXY=1
 
 # Cors
 ALLOWED_ORIGINS=https://backend-proseed.vercel.app,http://localhost:3000
