--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^7.1.0",
     "compression": "^1.7.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "bson": "^5.5.0"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "dev": "nodemon server.js",
     "dev:all": "concurrently \"npm run dev\" \"npm start --prefix frontend\"",
-    "build": "cd frontend && npm install && npm run build",
+    "build": "npm install",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "deploy": "vercel --prod"
   },
